Add stacksy-favicon and favicon_link_tag in heads for application and login layouts.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,6 +1,7 @@
 !!! 5
 %html
   %head
+    = favicon_link_tag 'stacksy-favicon.ico'
     %title Stacksy
     %link{href: "http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css", rel: "stylesheet"}
     = stylesheet_link_tag "application", :media => "all"
